Buscar Producto por Nombre
Nuevo EndPoint agregad busqueda de productos por nombre agregado en ruta, controlador y swagger
