# src/controllers/Productos.js
@@ -146,4 +146,21 @@ const eliminar = async(req, res)=>{
         });
 }
 
-module.exports = {crear, listar, actualizar, eliminar}
+//GET
+const listarPorNombre = async(req, res)=>{
+    let regex = new RegExp(req.params.Nombre, "i")
+    await Productos.find({NombreProducto : regex, Estado : true}, (error, data)=>{
+        if(error){
+            res.json({
+                mensaje : "Error al listar productos",
+                error
+            })
+        }else{
+            res.status(200).json(
+                data
+            )
+        }
+    });
+}
+
+module.exports = {crear, listar, actualizar, eliminar, listarPorNombre}
