# src/routes/swagger/swagger.yaml
@@ -650,6 +650,33 @@ paths:
             items:
               $ref : '#/definitions/Producto'
 
+  /Productos/listarPorNombre/{Nombre}:
+    get:
+      tags:
+      - Productos
+      summary: Listar Productos por coincidencias en su nombre
+      description: Listar Productos por coincidencias en su nombre
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: Nombre
+        in: path
+        description: Nombre del Producto a buscar
+        required: true
+        type: string
+      security:
+      - api_key: []
+      
+      responses:
+        200:
+          description: OK
+          schema :
+            type : array
+            items:
+              $ref : '#/definitions/Producto'
+
   /Productos/actualizar:
     put:
       tags:
